[gd_scene load_steps=18 format=4 uid="uid://dobxhogwkrtsa"]

[ext_resource type="Script" path="res://scenes/level_phones.gd" id="1_vs8bu"]
[ext_resource type="PackedScene" uid="uid://82aeqqi2rddp" path="res://ui/ui.tscn" id="2_ag8tm"]
[ext_resource type="TileSet" uid="uid://c537katjoknov" path="res://world/level_tileset.tres" id="3_m7uvp"]
[ext_resource type="PackedScene" uid="uid://31y11begqd5e" path="res://actors/door.tscn" id="4_bhaun"]
[ext_resource type="PackedScene" uid="uid://c3htqdtri5tvh" path="res://ui/ui_timer.tscn" id="4_s40hp"]
[ext_resource type="Script" path="res://actors/player_spawner.gd" id="5_wk735"]
[ext_resource type="Texture2D" uid="uid://cmd7ywvdh4356" path="res://assets/tomatic.png" id="7_vo3v2"]
[ext_resource type="Script" path="res://actors/phone_queue.gd" id="8_14i4i"]
[ext_resource type="AudioStream" uid="uid://b4odq8vtywypw" path="res://assets/pickup_sound.ogg" id="9_s13mu"]
[ext_resource type="Script" path="res://actors/area_spawner.gd" id="9_x5b7r"]
[ext_resource type="Script" path="res://actors/killzone_generic.gd" id="10_hrylp"]
[ext_resource type="AudioStream" uid="uid://d3407fp1xxmrt" path="res://assets/pickup_wrong_sound.ogg" id="10_thl7w"]
[ext_resource type="PackedScene" uid="uid://beieffefrp6x" path="res://actors/collectible.tscn" id="11_tk8dp"]
[ext_resource type="Resource" uid="uid://cn566rrv4mb0x" path="res://data/fita_webapps_trucades.tres" id="12_vh0u4"]
[ext_resource type="Script" path="res://scripts/collectible_data.gd" id="14_ke24o"]

[sub_resource type="SpriteFrames" id="SpriteFrames_s8hno"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_vo3v2")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_1eyb5"]

[node name="MainLevel" type="Node2D"]
script = ExtResource("1_vs8bu")

[node name="UI" parent="." instance=ExtResource("2_ag8tm")]

[node name="UITimer" parent="UI" instance=ExtResource("4_s40hp")]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -72.0
offset_top = 104.0
offset_right = 58.0
offset_bottom = 164.0
grow_horizontal = 2

[node name="TileMap" type="Node2D" parent="."]

[node name="PlayWorld" type="TileMapLayer" parent="TileMap"]
use_parent_material = true
tile_map_data = PackedByteArray("AAABAAAAAQACAAIAAAAAABMAAQACAAIAAAAAABIAAQACAAIAAAAAABEAAQAHAAIAAAAAAAwAAQADAAIAAAAAAAsAAQADAAIAAAAAAAoAAQADAAIAAAAAAAkAAQADAAIAAAAAAAgAAQADAAIAAAAAAAcAAQADAAIAAAAAAAYAAQADAAIAAAAAAAUAAQADAAIAAAAAAAQAAQADAAIAAAAAAAMAAQAHAAEAAAAAAAIAAQACAAIAAAAAAAEAAQACAAIAAAAAAAAAAQACAAIAAAAjAAAAAQACAAIAAAAiAAAAAQACAAIAAAAhAAAAAQACAAIAAAAgAAAAAQACAAIAAAAfAAAAAQACAAIAAAAeAAAAAQACAAIAAAAdAAAAAQACAAIAAAAcAAAAAQACAAIAAAAbAAAAAQACAAIAAAAaAAAAAQACAAIAAAAZAAAAAQACAAIAAAAYAAAAAQACAAIAAAAXAAAAAQACAAIAAAAWAAAAAQACAAIAAAAVAAAAAQACAAIAAAAUAAAAAQACAAIAAAATAAAAAQACAAIAAAASAAAAAQACAAIAAAARAAAAAQACAAIAAAAQAAAAAQACAAIAAAAPAAAAAQACAAIAAAAOAAAAAQACAAIAAAANAAAAAQACAAIAAAAMAAAAAQACAAIAAAALAAAAAQACAAIAAAAKAAAAAQACAAIAAAAJAAAAAQACAAIAAAAIAAAAAQACAAIAAAAHAAAAAQACAAIAAAAGAAAAAQACAAIAAAAFAAAAAQACAAIAAAAEAAAAAQACAAIAAAADAAAAAQACAAIAAAACAAAAAQACAAIAAAAAABQAAQACAAIAAAAAABUAAQACAAIAAAAAABYAAQACAAIAAAAAABcAAQACAAIAAAAAABgAAQACAAIAAAAHAAEAAQACAAIAAAAHAAIAAQACAAIAAAAHAAMAAQACAAMAAAAHAAQAAQACAAcAAAAHAAUAAQACAAgAAAAHAAYAAQACAAgAAAAHAAcAAQAHAAcAAAAHAAgAAQADAAgAAAAHAAkAAQAHAAgAAAAHAAoAAQACAAgAAAAHAAsAAQACAAgAAAAHAAwAAQACAAgAAAAHAA0AAQACAAgAAAAHAA4AAQACAAgAAAAHAA8AAQACAAgAAAAHABAAAQACAAkAAAAHABEAAQACAAEAAAAHABIAAQACAAIAAAAHABMAAQACAAIAAAAHABQAAQACAAIAAAAHABUAAQACAAIAAAAHABYAAQACAAIAAAAHABcAAQACAAIAAAAHABgAAQACAAIAAAAIAAEAAQACAAIAAAAIAAIAAQACAAIAAAAIAAMAAQACAAMAAAAIAAQAAQACAAcAAAAIAAUAAQACAAgAAAAIAAYAAQACAAgAAAAIAAcAAQACAAkAAAAIAAgAAQABAAUAAAAIAAkAAQACAAcAAAAIAAoAAQACAAgAAAAIAAsAAQACAAgAAAAIAAwAAQACAAgAAAAIAA0AAQACAAgAAAAIAA4AAQACAAgAAAAIAA8AAQACAAgAAAAIABAAAQACAAkAAAAIABEAAQACAAEAAAAIABIAAQACAAIAAAAIABMAAQACAAIAAAAIABQAAQACAAIAAAAIABUAAQACAAIAAAAIABYAAQACAAIAAAAIABcAAQACAAIAAAAIABgAAQACAAIAAAAJAAEAAQACAAIAAAAJAAIAAQACAAIAAAAJAAMAAQACAAMAAAAJAAQAAQACAAcAAAAJAAUAAQACAAgAAAAJAAYAAQACAAgAAAAJAAcAAQACAAkAAAAJAAgAAQADAAUAAAAJAAkAAQACAAcAAAAJAAoAAQACAAgAAAAJAAsAAQACAAgAAAAJAAwAAQACAAgAAAAJAA0AAQACAAgAAAAJAA4AAQACAAgAAAAJAA8AAQACAAgAAAAJABAAAQACAAkAAAAJABEAAQACAAEAAAAJABIAAQACAAIAAAAJABMAAQACAAIAAAAJABQAAQACAAIAAAAJABUAAQACAAIAAAAJABYAAQACAAIAAAAJABcAAQACAAIAAAAJABgAAQACAAIAAAAKAAEAAQACAAIAAAAKAAIAAQACAAIAAAAKAAMAAQACAAMAAAAKAAQAAQACAAcAAAAKAAUAAQACAAgAAAAKAAYAAQACAAgAAAAKAAcAAQAIAAcAAAAKAAgAAQABAAgAAAAKAAkAAQAIAAgAAAAKAAoAAQACAAgAAAAKAAsAAQACAAgAAAAKAAwAAQACAAgAAAAKAA0AAQACAAgAAAAKAA4AAQACAAgAAAAKAA8AAQACAAgAAAAKABAAAQACAAkAAAAKABEAAQACAAEAAAAKABIAAQACAAIAAAAKABMAAQACAAIAAAAKABQAAQACAAIAAAAKABUAAQACAAIAAAAKABYAAQACAAIAAAAKABcAAQACAAIAAAAKABgAAQACAAIAAAALAAEAAQACAAIAAAALAAIAAQACAAIAAAALAAMAAQACAAMAAAALAAQAAQACAAcAAAALAAUAAQACAAgAAAALAAYAAQACAAgAAAALAAcAAQACAAgAAAALAAgAAQACAAgAAAALAAkAAQACAAgAAAALAAoAAQACAAgAAAALAAsAAQACAAgAAAALAAwAAQACAAgAAAALAA0AAQACAAgAAAALAA4AAQACAAgAAAALAA8AAQACAAgAAAALABAAAQACAAkAAAALABEAAQACAAEAAAALABIAAQACAAIAAAALABMAAQACAAIAAAALABQAAQACAAIAAAALABUAAQACAAIAAAALABYAAQACAAIAAAALABcAAQACAAIAAAALABgAAQACAAIAAAAMAAEAAQACAAIAAAAMAAIAAQACAAIAAAAMAAMAAQACAAMAAAAMAAQAAQACAAcAAAAMAAUAAQACAAgAAAAMAAYAAQACAAgAAAAMAAcAAQACAAgAAAAMAAgAAQACAAgAAAAMAAkAAQACAAgAAAAMAAoAAQACAAgAAAAMAAsAAQACAAgAAAAMAAwAAQACAAgAAAAMAA0AAQACAAgAAAAMAA4AAQACAAgAAAAMAA8AAQACAAgAAAAMABAAAQACAAkAAAAMABEAAQACAAEAAAAMABIAAQACAAIAAAAMABMAAQACAAIAAAAMABQAAQACAAIAAAAMABUAAQACAAIAAAAMABYAAQACAAIAAAAMABcAAQACAAIAAAAMABgAAQACAAIAAAANAAEAAQACAAIAAAANAAIAAQACAAIAAAANAAMAAQACAAMAAAANAAQAAQACAAcAAAANAAUAAQACAAgAAAANAAYAAQACAAgAAAANAAcAAQACAAgAAAANAAgAAQACAAgAAAANAAkAAQACAAgAAAANAAoAAQACAAgAAAANAAsAAQACAAgAAAANAAwAAQACAAgAAAANAA0AAQACAAgAAAANAA4AAQACAAgAAAANAA8AAQACAAgAAAANABAAAQACAAkAAAANABEAAQACAAEAAAANABIAAQACAAIAAAANABMAAQACAAIAAAANABQAAQACAAIAAAANABUAAQACAAIAAAANABYAAQACAAIAAAANABcAAQACAAIAAAANABgAAQACAAIAAAAOAAEAAQACAAIAAAAOAAIAAQACAAIAAAAOAAMAAQACAAMAAAAOAAQAAQACAAcAAAAOAAUAAQACAAgAAAAOAAYAAQACAAgAAAAOAAcAAQACAAgAAAAOAAgAAQACAAgAAAAOAAkAAQACAAgAAAAOAAoAAQACAAgAAAAOAAsAAQACAAgAAAAOAAwAAQACAAgAAAAOAA0AAQACAAgAAAAOAA4AAQACAAgAAAAOAA8AAQACAAgAAAAOABAAAQACAAkAAAAOABEAAQACAAEAAAAOABIAAQACAAIAAAAOABMAAQACAAIAAAAOABQAAQACAAIAAAAOABUAAQACAAIAAAAOABYAAQACAAIAAAAOABcAAQACAAIAAAAOABgAAQACAAIAAAAPAAEAAQACAAIAAAAPAAIAAQACAAIAAAAPAAMAAQACAAMAAAAPAAQAAQACAAcAAAAPAAUAAQACAAgAAAAPAAYAAQACAAgAAAAPAAcAAQACAAgAAAAPAAkAAQACAAgAAAAPAAoAAQACAAgAAAAPAAsAAQACAAgAAAAPAAwAAQACAAgAAAAPAA0AAQACAAgAAAAPAA4AAQACAAgAAAAPAA8AAQACAAgAAAAPABAAAQACAAkAAAAPABEAAQACAAEAAAAPABIAAQACAAIAAAAPABMAAQACAAIAAAAPABQAAQACAAIAAAAPABUAAQACAAIAAAAPABYAAQACAAIAAAAPABcAAQACAAIAAAAPABgAAQACAAIAAAAQAAEAAQACAAIAAAAQAAIAAQACAAIAAAAQAAMAAQACAAMAAAAQAAQAAQACAAcAAAAQAAUAAQACAAgAAAAQAAYAAQACAAgAAAAQAAcAAQACAAgAAAAQAAgAAQACAAgAAAAQAAkAAQACAAgAAAAQAAoAAQACAAgAAAAQAAsAAQACAAgAAAAQAAwAAQACAAgAAAAQAA0AAQACAAgAAAAQAA4AAQACAAgAAAAQAA8AAQACAAgAAAAQABAAAQACAAkAAAAQABEAAQACAAEAAAAQABIAAQACAAIAAAAQABMAAQACAAIAAAAQABQAAQACAAIAAAAQABUAAQACAAIAAAAQABYAAQACAAIAAAAQABcAAQACAAIAAAAQABgAAQACAAIAAAARAAEAAQACAAIAAAARAAIAAQACAAIAAAARAAMAAQACAAMAAAARAAQAAQACAAcAAAARAAUAAQACAAgAAAARAAYAAQACAAgAAAARAAcAAQACAAgAAAARAAgAAQACAAgAAAARAAkAAQACAAgAAAARAAoAAQACAAgAAAARAAsAAQACAAgAAAARAAwAAQACAAgAAAARAA0AAQACAAgAAAARAA4AAQACAAgAAAARAA8AAQACAAgAAAARABAAAQACAAkAAAARABEAAQACAAEAAAARABIAAQACAAIAAAARABMAAQACAAIAAAARABQAAQACAAIAAAARABUAAQACAAIAAAARABYAAQACAAIAAAARABcAAQACAAIAAAARABgAAQACAAIAAAASAAEAAQACAAIAAAASAAIAAQACAAIAAAASAAMAAQACAAMAAAASAAQAAQACAAcAAAASAAUAAQACAAgAAAASAAYAAQACAAgAAAASAAcAAQACAAgAAAASAAgAAQACAAgAAAASAAkAAQACAAgAAAASAAoAAQACAAgAAAASAAsAAQACAAgAAAASAAwAAQACAAgAAAASAA0AAQACAAgAAAASAA4AAQACAAgAAAASAA8AAQACAAgAAAASABAAAQACAAkAAAASABEAAQACAAEAAAASABIAAQACAAIAAAASABMAAQACAAIAAAASABQAAQACAAIAAAASABUAAQACAAIAAAASABYAAQACAAIAAAASABcAAQACAAIAAAASABgAAQACAAIAAAATAAEAAQACAAIAAAATAAIAAQACAAIAAAATAAMAAQACAAMAAAATAAQAAQACAAcAAAATAAUAAQACAAgAAAATAAYAAQACAAgAAAATAAcAAQACAAgAAAATAAgAAQACAAgAAAATAAkAAQACAAgAAAATAAoAAQACAAgAAAATAAsAAQACAAgAAAATAAwAAQACAAgAAAATAA0AAQACAAgAAAATAA4AAQACAAgAAAATAA8AAQACAAgAAAATABAAAQACAAkAAAATABEAAQACAAEAAAATABIAAQACAAIAAAATABMAAQACAAIAAAATABQAAQACAAIAAAATABUAAQACAAIAAAATABYAAQACAAIAAAATABcAAQACAAIAAAATABgAAQACAAIAAAAUAAEAAQACAAIAAAAUAAIAAQACAAIAAAAUAAMAAQACAAMAAAAUAAQAAQACAAcAAAAUAAUAAQACAAgAAAAUAAYAAQACAAgAAAAUAAcAAQACAAgAAAAUAAgAAQACAAgAAAAUAAkAAQACAAgAAAAUAAoAAQACAAgAAAAUAAsAAQACAAgAAAAUAAwAAQACAAgAAAAUAA0AAQACAAgAAAAUAA4AAQACAAgAAAAUAA8AAQACAAgAAAAUABAAAQACAAkAAAAUABEAAQACAAEAAAAUABIAAQACAAIAAAAUABMAAQACAAIAAAAUABQAAQACAAIAAAAUABUAAQACAAIAAAAUABYAAQACAAIAAAAUABcAAQACAAIAAAAUABgAAQACAAIAAAAVAAEAAQACAAIAAAAVAAIAAQACAAIAAAAVAAMAAQACAAMAAAAVAAQAAQACAAcAAAAVAAUAAQACAAgAAAAVAAYAAQACAAgAAAAVAAcAAQACAAgAAAAVAAgAAQACAAgAAAAVAAkAAQACAAgAAAAVAAoAAQACAAgAAAAVAAsAAQACAAgAAAAVAAwAAQACAAgAAAAVAA0AAQACAAgAAAAVAA4AAQACAAgAAAAVAA8AAQACAAgAAAAVABAAAQACAAkAAAAVABEAAQACAAEAAAAVABIAAQACAAIAAAAVABMAAQACAAIAAAAVABQAAQACAAIAAAAVABUAAQACAAIAAAAVABYAAQACAAIAAAAVABcAAQACAAIAAAAVABgAAQACAAIAAAAWAAEAAQACAAIAAAAWAAIAAQACAAIAAAAWAAMAAQACAAMAAAAWAAQAAQACAAcAAAAWAAUAAQACAAgAAAAWAAYAAQACAAgAAAAWAAcAAQACAAgAAAAWAAgAAQACAAgAAAAWAAkAAQACAAgAAAAWAAoAAQACAAgAAAAWAAsAAQACAAgAAAAWAAwAAQACAAgAAAAWAA0AAQACAAgAAAAWAA4AAQACAAgAAAAWAA8AAQACAAgAAAAWABAAAQACAAkAAAAWABEAAQACAAEAAAAWABIAAQACAAIAAAAWABMAAQACAAIAAAAWABQAAQACAAIAAAAWABUAAQACAAIAAAAWABYAAQACAAIAAAAWABcAAQACAAIAAAAWABgAAQACAAIAAAAXAAEAAQACAAIAAAAXAAIAAQACAAIAAAAXAAMAAQACAAMAAAAXAAQAAQACAAcAAAAXAAUAAQACAAgAAAAXAAYAAQACAAgAAAAXAAcAAQACAAgAAAAXAAgAAQACAAgAAAAXAAkAAQACAAgAAAAXAAoAAQACAAgAAAAXAAsAAQACAAgAAAAXAAwAAQACAAgAAAAXAA0AAQACAAgAAAAXAA4AAQACAAgAAAAXAA8AAQACAAgAAAAXABAAAQACAAkAAAAXABEAAQACAAEAAAAXABIAAQACAAIAAAAXABMAAQACAAIAAAAXABQAAQACAAIAAAAXABUAAQACAAIAAAAXABYAAQACAAIAAAAXABcAAQACAAIAAAAXABgAAQACAAIAAAAYAAEAAQACAAIAAAAYAAIAAQACAAIAAAAYAAMAAQACAAMAAAAYAAQAAQACAAcAAAAYAAUAAQACAAgAAAAYAAYAAQACAAgAAAAYAAcAAQACAAgAAAAYAAgAAQACAAgAAAAYAAkAAQACAAgAAAAYAAoAAQACAAgAAAAYAAsAAQACAAgAAAAYAAwAAQACAAgAAAAYAA0AAQACAAgAAAAYAA4AAQACAAgAAAAYAA8AAQACAAgAAAAYABAAAQACAAkAAAAYABEAAQACAAEAAAAYABIAAQACAAIAAAAYABMAAQACAAIAAAAYABQAAQACAAIAAAAYABUAAQACAAIAAAAYABYAAQACAAIAAAAYABcAAQACAAIAAAAYABgAAQACAAIAAAAZAAEAAQACAAIAAAAZAAIAAQACAAIAAAAZAAMAAQACAAMAAAAZAAQAAQACAAcAAAAZAAUAAQACAAgAAAAZAAYAAQACAAgAAAAZAAcAAQACAAgAAAAZAAgAAQACAAgAAAAZAAkAAQACAAgAAAAZAAoAAQACAAgAAAAZAAsAAQACAAgAAAAZAAwAAQACAAgAAAAZAA0AAQACAAgAAAAZAA4AAQACAAgAAAAZAA8AAQACAAgAAAAZABAAAQACAAkAAAAZABEAAQACAAEAAAAZABIAAQACAAIAAAAZABMAAQACAAIAAAAZABQAAQACAAIAAAAZABUAAQACAAIAAAAZABYAAQACAAIAAAAZABcAAQACAAIAAAAZABgAAQACAAIAAAAaAAEAAQACAAIAAAAaAAIAAQACAAIAAAAaAAMAAQACAAMAAAAaAAQAAQACAAcAAAAaAAUAAQACAAgAAAAaAAYAAQACAAgAAAAaAAcAAQACAAgAAAAaAAgAAQACAAgAAAAaAAkAAQACAAgAAAAaAAoAAQACAAgAAAAaAAsAAQACAAgAAAAaAAwAAQACAAgAAAAaAA0AAQACAAgAAAAaAA4AAQACAAgAAAAaAA8AAQACAAgAAAAaABAAAQACAAkAAAAaABEAAQACAAEAAAAaABIAAQACAAIAAAAaABMAAQACAAIAAAAaABQAAQACAAIAAAAaABUAAQACAAIAAAAaABYAAQACAAIAAAAaABcAAQACAAIAAAAaABgAAQACAAIAAAAbAAEAAQACAAIAAAAbAAIAAQACAAIAAAAbAAMAAQACAAMAAAAbAAQAAQACAAcAAAAbAAUAAQACAAgAAAAbAAYAAQACAAgAAAAbAAcAAQACAAgAAAAbAAgAAQACAAgAAAAbAAkAAQACAAgAAAAbAAoAAQACAAgAAAAbAAsAAQACAAgAAAAbAAwAAQACAAgAAAAbAA0AAQACAAgAAAAbAA4AAQACAAgAAAAbAA8AAQACAAgAAAAbABAAAQACAAkAAAAbABEAAQACAAEAAAAbABIAAQACAAIAAAAbABMAAQACAAIAAAAbABQAAQACAAIAAAAbABUAAQACAAIAAAAbABYAAQACAAIAAAAbABcAAQACAAIAAAAbABgAAQACAAIAAAAcAAEAAQACAAIAAAAcAAIAAQACAAIAAAAcAAMAAQACAAMAAAAcAAQAAQACAAcAAAAcAAUAAQACAAgAAAAcAAYAAQACAAgAAAAcAAcAAQACAAgAAAAcAAgAAQACAAgAAAAcAAkAAQACAAgAAAAcAAoAAQACAAgAAAAcAAsAAQACAAgAAAAcAAwAAQACAAgAAAAcAA0AAQACAAgAAAAcAA4AAQACAAgAAAAcAA8AAQACAAgAAAAcABAAAQACAAkAAAAcABEAAQACAAEAAAAcABIAAQACAAIAAAAcABMAAQACAAIAAAAcABQAAQACAAIAAAAcABUAAQACAAIAAAAcABYAAQACAAIAAAAcABcAAQACAAIAAAAcABgAAQACAAIAAAAdAAEAAQACAAIAAAAdAAIAAQACAAIAAAAdAAMAAQACAAMAAAAdAAQAAQACAAcAAAAdAAUAAQACAAgAAAAdAAYAAQACAAgAAAAdAAcAAQACAAgAAAAdAAgAAQACAAgAAAAdAAkAAQACAAgAAAAdAAoAAQACAAgAAAAdAAsAAQACAAgAAAAdAAwAAQACAAgAAAAdAA0AAQACAAgAAAAdAA4AAQACAAgAAAAdAA8AAQACAAgAAAAdABAAAQACAAkAAAAdABEAAQACAAEAAAAdABIAAQACAAIAAAAdABMAAQACAAIAAAAdABQAAQACAAIAAAAdABUAAQACAAIAAAAdABYAAQACAAIAAAAdABcAAQACAAIAAAAdABgAAQACAAIAAAAeAAEAAQACAAIAAAAeAAIAAQACAAIAAAAeAAMAAQACAAMAAAAeAAQAAQACAAcAAAAeAAUAAQACAAgAAAAeAAYAAQACAAgAAAAeAAcAAQACAAgAAAAeAAgAAQACAAgAAAAeAAkAAQACAAgAAAAeAAoAAQACAAgAAAAeAAsAAQACAAgAAAAeAAwAAQACAAgAAAAeAA0AAQACAAgAAAAeAA4AAQACAAgAAAAeAA8AAQACAAgAAAAeABAAAQACAAkAAAAeABEAAQACAAEAAAAeABIAAQACAAIAAAAeABMAAQACAAIAAAAeABQAAQACAAIAAAAeABUAAQACAAIAAAAeABYAAQACAAIAAAAeABcAAQACAAIAAAAeABgAAQACAAIAAAAfAAEAAQACAAIAAAAfAAIAAQACAAIAAAAfAAMAAQACAAMAAAAfAAQAAQACAAcAAAAfAAUAAQACAAgAAAAfAAYAAQACAAgAAAAfAAcAAQACAAgAAAAfAAgAAQACAAgAAAAfAAkAAQACAAgAAAAfAAoAAQACAAgAAAAfAAsAAQACAAgAAAAfAAwAAQACAAgAAAAfAA0AAQACAAgAAAAfAA4AAQACAAgAAAAfAA8AAQACAAgAAAAfABAAAQACAAkAAAAfABEAAQACAAEAAAAfABIAAQACAAIAAAAfABMAAQACAAIAAAAfABQAAQACAAIAAAAfABUAAQACAAIAAAAfABYAAQACAAIAAAAfABcAAQACAAIAAAAfABgAAQACAAIAAAAgAAEAAQACAAIAAAAgAAIAAQACAAIAAAAgAAMAAQACAAMAAAAgAAQAAQACAAcAAAAgAAUAAQACAAgAAAAgAAYAAQACAAgAAAAgAAcAAQACAAgAAAAgAAgAAQACAAgAAAAgAAkAAQACAAgAAAAgAAoAAQACAAgAAAAgAAsAAQACAAgAAAAgAAwAAQACAAgAAAAgAA0AAQACAAgAAAAgAA4AAQACAAgAAAAgAA8AAQACAAgAAAAgABAAAQACAAkAAAAgABEAAQACAAEAAAAgABIAAQACAAIAAAAgABMAAQACAAIAAAAgABQAAQACAAIAAAAgABUAAQACAAIAAAAgABYAAQACAAIAAAAgABcAAQACAAIAAAAgABgAAQACAAIAAAAhAAEAAQACAAIAAAAhAAIAAQACAAIAAAAhAAMAAQACAAMAAAAhAAQAAQADAAcAAAAhAAUAAQADAAgAAAAhAAYAAQADAAgAAAAhAAcAAQADAAgAAAAhAAgAAQADAAgAAAAhAAkAAQADAAgAAAAhAAoAAQADAAgAAAAhAAsAAQADAAgAAAAhAAwAAQADAAgAAAAhAA0AAQADAAgAAAAhAA4AAQADAAgAAAAhAA8AAQADAAgAAAAhABAAAQADAAkAAAAhABEAAQACAAEAAAAhABIAAQACAAIAAAAhABMAAQACAAIAAAAhABQAAQACAAIAAAAhABUAAQACAAIAAAAhABYAAQACAAIAAAAhABcAAQACAAIAAAAhABgAAQACAAIAAAAiAAEAAQACAAIAAAAiAAIAAQACAAIAAAAiAAMAAQAIAAEAAAAiAAQAAQABAAIAAAAiAAUAAQABAAIAAAAiAAYAAQABAAIAAAAiAAcAAQABAAIAAAAiAAgAAQABAAIAAAAiAAkAAQABAAIAAAAiAAoAAQABAAIAAAAiAAsAAQABAAIAAAAiAAwAAQABAAIAAAAiAA0AAQABAAIAAAAjAAEAAQACAAIAAAAjAAIAAQACAAIAAAAjAAMAAQACAAIAAAAjAAQAAQACAAIAAAAjAAUAAQACAAIAAAAjAAYAAQACAAIAAAAjAAcAAQACAAIAAAAjAAgAAQACAAIAAAAjAAkAAQACAAIAAAAjAAoAAQACAAIAAAAjAAsAAQACAAIAAAAjAAwAAQACAAIAAAAjAA0AAQACAAIAAAACAAEAAQACAAIAAAACAAIAAQACAAIAAAACAAMAAQACAAMAAAACAAQAAQACAAcAAAACAAUAAQACAAgAAAACAAYAAQACAAgAAAACAAcAAQACAAgAAAACAAgAAQACAAgAAAACAAkAAQACAAgAAAACAAoAAQACAAgAAAACAAsAAQACAAgAAAACAAwAAQACAAgAAAACAA0AAQACAAgAAAACAA4AAQACAAgAAAACAA8AAQACAAgAAAACABAAAQACAAkAAAACABEAAQACAAEAAAACABIAAQACAAIAAAACABMAAQACAAIAAAACABQAAQACAAIAAAACABUAAQACAAIAAAACABYAAQACAAIAAAACABcAAQACAAIAAAACABgAAQACAAIAAAADAAEAAQACAAIAAAADAAIAAQACAAIAAAADAAMAAQACAAMAAAADAAQAAQACAAcAAAADAAUAAQACAAgAAAADAAYAAQACAAgAAAADAAcAAQACAAgAAAADAAgAAQACAAgAAAADAAkAAQACAAgAAAADAAoAAQACAAgAAAADAAsAAQACAAgAAAADAAwAAQACAAgAAAADAA0AAQACAAgAAAADAA4AAQACAAgAAAADAA8AAQACAAgAAAADABAAAQACAAkAAAADABEAAQACAAEAAAADABIAAQACAAIAAAADABMAAQACAAIAAAADABQAAQACAAIAAAADABUAAQACAAIAAAADABYAAQACAAIAAAADABcAAQACAAIAAAADABgAAQACAAIAAAAEAAEAAQACAAIAAAAEAAIAAQACAAIAAAAEAAMAAQACAAMAAAAEAAQAAQACAAcAAAAEAAUAAQACAAgAAAAEAAYAAQACAAgAAAAEAAcAAQACAAgAAAAEAAgAAQACAAgAAAAEAAkAAQACAAgAAAAEAAoAAQACAAgAAAAEAAsAAQACAAgAAAAEAAwAAQACAAgAAAAEAA0AAQACAAgAAAAEAA4AAQACAAgAAAAEAA8AAQACAAgAAAAEABAAAQACAAkAAAAEABEAAQACAAEAAAAEABIAAQACAAIAAAAEABMAAQACAAIAAAAEABQAAQACAAIAAAAEABUAAQACAAIAAAAEABYAAQACAAIAAAAEABcAAQACAAIAAAAEABgAAQACAAIAAAAFAAEAAQACAAIAAAAFAAIAAQACAAIAAAAFAAMAAQACAAMAAAAFAAQAAQACAAcAAAAFAAUAAQACAAgAAAAFAAYAAQACAAgAAAAFAAcAAQACAAgAAAAFAAgAAQACAAgAAAAFAAkAAQACAAgAAAAFAAoAAQACAAgAAAAFAAsAAQACAAgAAAAFAAwAAQACAAgAAAAFAA0AAQACAAgAAAAFAA4AAQACAAgAAAAFAA8AAQACAAgAAAAFABAAAQACAAkAAAAFABEAAQACAAEAAAAFABIAAQACAAIAAAAFABMAAQACAAIAAAAFABQAAQACAAIAAAAFABUAAQACAAIAAAAFABYAAQACAAIAAAAFABcAAQACAAIAAAAFABgAAQACAAIAAAAGAAEAAQACAAIAAAAGAAIAAQACAAIAAAAGAAMAAQACAAMAAAAGAAQAAQACAAcAAAAGAAUAAQACAAgAAAAGAAYAAQACAAgAAAAGAAcAAQACAAgAAAAGAAgAAQACAAgAAAAGAAkAAQACAAgAAAAGAAoAAQACAAgAAAAGAAsAAQACAAgAAAAGAAwAAQACAAgAAAAGAA0AAQACAAgAAAAGAA4AAQACAAgAAAAGAA8AAQACAAgAAAAGABAAAQACAAkAAAAGABEAAQACAAEAAAAGABIAAQACAAIAAAAGABMAAQACAAIAAAAGABQAAQACAAIAAAAGABUAAQACAAIAAAAGABYAAQACAAIAAAAGABcAAQACAAIAAAAGABgAAQACAAIAAAABAAMAAQACAAMAAAABAAQAAQABAAcAAAABAA0AAQABAAgAAAABAAwAAQABAAgAAAABAAsAAQABAAgAAAABAAoAAQABAAgAAAABAAkAAQABAAgAAAABAAgAAQABAAgAAAABAAcAAQABAAgAAAABAAYAAQABAAgAAAABAAUAAQABAAgAAAABAA8AAQABAAgAAAABAA4AAQABAAgAAAABAAIAAQACAAIAAAD//wAAAQACAAIAAAD//wEAAQACAAIAAAD+/wIAAQACAAIAAAD+/wMAAQACAAIAAAD+/wQAAQACAAIAAAD+/wUAAQACAAIAAAD+/wYAAQACAAIAAAD+/wcAAQACAAIAAAD+/wgAAQACAAIAAAD+/wkAAQACAAIAAAD+/woAAQACAAIAAAD+/wsAAQACAAIAAAD+/wwAAQACAAIAAAD+/w0AAQACAAIAAAD//wwAAQACAAIAAAD//wsAAQACAAIAAAD//woAAQACAAIAAAD//wkAAQACAAIAAAD//wgAAQACAAIAAAD//wcAAQACAAIAAAD//wYAAQACAAIAAAD//wUAAQACAAIAAAD//wQAAQACAAIAAAD//wMAAQACAAIAAAD//wIAAQACAAIAAAABABEAAQACAAEAAAABABAAAQABAAkAAAABABIAAQACAAIAAAABABMAAQACAAIAAAABABQAAQACAAIAAAABABUAAQACAAIAAAABABYAAQACAAIAAAABABcAAQACAAIAAAD//xcAAQACAAIAAAD//xgAAQACAAIAAAD+/xcAAQACAAIAAAD+/xgAAQACAAIAAAABABgAAQACAAIAAAAPAAgAAQACAAgAAAABAAEAAQACAAIAAAD+/wEAAQACAAIAAAD+/wAAAQACAAIAAAAnAB0AAQACAAIAAAAnABwAAQACAAIAAAAnABsAAQACAAIAAAAnABoAAQACAAIAAAAnABkAAQACAAIAAAAnABgAAQACAAIAAAAnABcAAQACAAIAAAAnABYAAQACAAIAAAAnABUAAQACAAIAAAAnABQAAQACAAIAAAAnABMAAQACAAIAAAAnABIAAQACAAIAAAAnABEAAQACAAIAAAAnABAAAQACAAIAAAAnAA8AAQACAAIAAAAnAA4AAQACAAIAAAAnAA0AAQACAAIAAAAnAAwAAQACAAIAAAAmAB0AAQACAAIAAAAmABwAAQACAAIAAAAmABsAAQACAAIAAAAmABoAAQACAAIAAAAmABkAAQACAAIAAAAmABgAAQACAAIAAAAmABcAAQACAAIAAAAmABYAAQACAAIAAAAmABUAAQACAAIAAAAmABQAAQACAAIAAAAmABMAAQACAAIAAAAmABIAAQACAAIAAAAmABEAAQACAAIAAAAmABAAAQACAAIAAAAmAA8AAQACAAIAAAAmAA4AAQACAAIAAAAmAA0AAQACAAIAAAAmAAwAAQACAAIAAAAlAB0AAQACAAIAAAAlABwAAQACAAIAAAAlABsAAQACAAIAAAAlABoAAQACAAIAAAAlABkAAQACAAIAAAAlABgAAQACAAIAAAAlABcAAQACAAIAAAAlABYAAQACAAIAAAAlABUAAQACAAIAAAAlABQAAQACAAIAAAAlABMAAQACAAIAAAAlABIAAQACAAIAAAAlABEAAQACAAIAAAAlABAAAQACAAIAAAAlAA8AAQACAAIAAAAlAA4AAQACAAIAAAAlAA0AAQACAAIAAAAlAAwAAQACAAIAAAAkAB0AAQACAAIAAAAkABwAAQACAAIAAAAkABsAAQACAAIAAAAkABoAAQACAAIAAAAkABkAAQACAAIAAAAkABgAAQACAAIAAAAkABcAAQACAAIAAAAkABYAAQACAAIAAAAkABUAAQACAAIAAAAkABQAAQACAAIAAAAkABMAAQACAAIAAAAkABIAAQACAAIAAAAkABEAAQACAAIAAAAkABAAAQACAAIAAAAkAA8AAQACAAIAAAAkAA4AAQACAAIAAAAkAA0AAQACAAIAAAAkAAwAAQACAAIAAAAjAB0AAQACAAIAAAAjABwAAQACAAIAAAAjABsAAQACAAIAAAAjABoAAQACAAIAAAAjABkAAQACAAIAAAAjABgAAQACAAIAAAAjABcAAQACAAIAAAAjABYAAQACAAIAAAAjABUAAQACAAIAAAAjABQAAQACAAIAAAAjABMAAQACAAIAAAAjABIAAQACAAIAAAAjABEAAQACAAIAAAAjABAAAQACAAIAAAAjAA8AAQACAAIAAAAjAA4AAQACAAIAAAAiAB0AAQACAAIAAAAiABwAAQACAAIAAAAiABsAAQACAAIAAAAiABoAAQACAAIAAAAiABkAAQACAAIAAAAiABgAAQACAAIAAAAiABcAAQACAAIAAAAiABYAAQACAAIAAAAiABUAAQACAAIAAAAiABQAAQACAAIAAAAiABMAAQACAAIAAAAiABIAAQACAAIAAAAiABEAAQAIAAIAAAAiABAAAQABAAIAAAAiAA8AAQABAAIAAAAiAA4AAQABAAIAAAAhAB0AAQACAAIAAAAhABwAAQACAAIAAAAhABsAAQACAAIAAAAhABoAAQACAAIAAAAhABkAAQACAAIAAAAgAB0AAQACAAIAAAAgABwAAQACAAIAAAAgABsAAQACAAIAAAAgABoAAQACAAIAAAAgABkAAQACAAIAAAAqAB4AAQACAAIAAAAqAB0AAQACAAIAAAAqABwAAQACAAIAAAAqABsAAQACAAIAAAAqABoAAQACAAIAAAAqABkAAQACAAIAAAAqABgAAQACAAIAAAAqABcAAQACAAIAAAAqABYAAQACAAIAAAAqABUAAQACAAIAAAApAB4AAQACAAIAAAApAB0AAQACAAIAAAApABwAAQACAAIAAAApABsAAQACAAIAAAApABoAAQACAAIAAAApABkAAQACAAIAAAApABgAAQACAAIAAAApABcAAQACAAIAAAApABYAAQACAAIAAAApABUAAQACAAIAAAAoAB4AAQACAAIAAAAoAB0AAQACAAIAAAAoABwAAQACAAIAAAAoABsAAQACAAIAAAAoABoAAQACAAIAAAAoABkAAQACAAIAAAAoABgAAQACAAIAAAAoABcAAQACAAIAAAAoABYAAQACAAIAAAAoABUAAQACAAIAAAAnAB4AAQACAAIAAAAmAB4AAQACAAIAAAAlAB4AAQACAAIAAAAkAB4AAQACAAIAAAAjAB4AAQACAAIAAAAiAB4AAQACAAIAAAAhAB4AAQACAAIAAAAgAB4AAQACAAIAAAAfAB4AAQACAAIAAAAfAB0AAQACAAIAAAAfABwAAQACAAIAAAAfABsAAQACAAIAAAAfABoAAQACAAIAAAAfABkAAQACAAIAAAAeAB4AAQACAAIAAAAeAB0AAQACAAIAAAAeABwAAQACAAIAAAAeABsAAQACAAIAAAAeABoAAQACAAIAAAAeABkAAQACAAIAAAAdAB4AAQACAAIAAAAdAB0AAQACAAIAAAAdABwAAQACAAIAAAAdABsAAQACAAIAAAAdABoAAQACAAIAAAAdABkAAQACAAIAAAAcAB4AAQACAAIAAAAcAB0AAQACAAIAAAAcABwAAQACAAIAAAAcABsAAQACAAIAAAAcABoAAQACAAIAAAAcABkAAQACAAIAAAAbAB4AAQACAAIAAAAbAB0AAQACAAIAAAAbABwAAQACAAIAAAAbABsAAQACAAIAAAAbABoAAQACAAIAAAAbABkAAQACAAIAAAAaAB4AAQACAAIAAAAaAB0AAQACAAIAAAAaABwAAQACAAIAAAAaABsAAQACAAIAAAAaABoAAQACAAIAAAAaABkAAQACAAIAAAAZAB4AAQACAAIAAAAZAB0AAQACAAIAAAAZABwAAQACAAIAAAAZABsAAQACAAIAAAAZABoAAQACAAIAAAAZABkAAQACAAIAAAAYAB4AAQACAAIAAAAYAB0AAQACAAIAAAAYABwAAQACAAIAAAAYABsAAQACAAIAAAAYABoAAQACAAIAAAAYABkAAQACAAIAAAAXAB4AAQACAAIAAAAXAB0AAQACAAIAAAAXABwAAQACAAIAAAAXABsAAQACAAIAAAAXABoAAQACAAIAAAAXABkAAQACAAIAAAAWAB4AAQACAAIAAAAWAB0AAQACAAIAAAAWABwAAQACAAIAAAAWABsAAQACAAIAAAAWABoAAQACAAIAAAAWABkAAQACAAIAAAAVAB4AAQACAAIAAAAVAB0AAQACAAIAAAAVABwAAQACAAIAAAAVABsAAQACAAIAAAAVABoAAQACAAIAAAAVABkAAQACAAIAAAAUAB4AAQACAAIAAAAUAB0AAQACAAIAAAAUABwAAQACAAIAAAAUABsAAQACAAIAAAAUABoAAQACAAIAAAAUABkAAQACAAIAAAATAB4AAQACAAIAAAATAB0AAQACAAIAAAATABwAAQACAAIAAAATABsAAQACAAIAAAATABoAAQACAAIAAAATABkAAQACAAIAAAASAB4AAQACAAIAAAASAB0AAQACAAIAAAASABwAAQACAAIAAAASABsAAQACAAIAAAASABoAAQACAAIAAAASABkAAQACAAIAAAARAB4AAQACAAIAAAARAB0AAQACAAIAAAARABwAAQACAAIAAAARABsAAQACAAIAAAARABoAAQACAAIAAAARABkAAQACAAIAAAAQAB4AAQACAAIAAAAQAB0AAQACAAIAAAAQABwAAQACAAIAAAAQABsAAQACAAIAAAAQABoAAQACAAIAAAAQABkAAQACAAIAAAAPAB4AAQACAAIAAAAPAB0AAQACAAIAAAAPABwAAQACAAIAAAAPABsAAQACAAIAAAAPABoAAQACAAIAAAAPABkAAQACAAIAAAAOAB4AAQACAAIAAAAOAB0AAQACAAIAAAAOABwAAQACAAIAAAAOABsAAQACAAIAAAAOABoAAQACAAIAAAAOABkAAQACAAIAAAANAB4AAQACAAIAAAANAB0AAQACAAIAAAANABwAAQACAAIAAAANABsAAQACAAIAAAANABoAAQACAAIAAAANABkAAQACAAIAAAAMAB4AAQACAAIAAAAMAB0AAQACAAIAAAAMABwAAQACAAIAAAAMABsAAQACAAIAAAAMABoAAQACAAIAAAAMABkAAQACAAIAAAALAB4AAQACAAIAAAALAB0AAQACAAIAAAALABwAAQACAAIAAAALABsAAQACAAIAAAALABoAAQACAAIAAAALABkAAQACAAIAAAAKAB4AAQACAAIAAAAKAB0AAQACAAIAAAAKABwAAQACAAIAAAAKABsAAQACAAIAAAAKABoAAQACAAIAAAAKABkAAQACAAIAAAAJAB4AAQACAAIAAAAJAB0AAQACAAIAAAAJABwAAQACAAIAAAAJABsAAQACAAIAAAAJABoAAQACAAIAAAAJABkAAQACAAIAAAAIAB4AAQACAAIAAAAIAB0AAQACAAIAAAAIABwAAQACAAIAAAAIABsAAQACAAIAAAAIABoAAQACAAIAAAAIABkAAQACAAIAAAAHAB4AAQACAAIAAAAHAB0AAQACAAIAAAAHABwAAQACAAIAAAAHABsAAQACAAIAAAAHABoAAQACAAIAAAAHABkAAQACAAIAAAAGAB4AAQACAAIAAAAGAB0AAQACAAIAAAAGABwAAQACAAIAAAAGABsAAQACAAIAAAAGABoAAQACAAIAAAAGABkAAQACAAIAAAAFAB4AAQACAAIAAAAFAB0AAQACAAIAAAAFABwAAQACAAIAAAAFABsAAQACAAIAAAAFABoAAQACAAIAAAAFABkAAQACAAIAAAAEAB4AAQACAAIAAAAEAB0AAQACAAIAAAAEABwAAQACAAIAAAAEABsAAQACAAIAAAAEABoAAQACAAIAAAAEABkAAQACAAIAAAADAB4AAQACAAIAAAADAB0AAQACAAIAAAADABwAAQACAAIAAAADABsAAQACAAIAAAADABoAAQACAAIAAAADABkAAQACAAIAAAACAB4AAQACAAIAAAACAB0AAQACAAIAAAACABwAAQACAAIAAAACABsAAQACAAIAAAACABoAAQACAAIAAAACABkAAQACAAIAAAABAB4AAQACAAIAAAABAB0AAQACAAIAAAABABwAAQACAAIAAAABABsAAQACAAIAAAABABoAAQACAAIAAAABABkAAQACAAIAAAAAAB4AAQACAAIAAAAAAB0AAQACAAIAAAAAABwAAQACAAIAAAAAABsAAQACAAIAAAAAABoAAQACAAIAAAAAABkAAQACAAIAAAD//x4AAQACAAIAAAD//x0AAQACAAIAAAD//xwAAQACAAIAAAD//xsAAQACAAIAAAD//xoAAQACAAIAAAD//xkAAQACAAIAAAD+/x4AAQACAAIAAAD+/x0AAQACAAIAAAD+/xwAAQACAAIAAAD+/xsAAQACAAIAAAD+/xoAAQACAAIAAAD+/xkAAQACAAIAAAD9/x4AAQACAAIAAAD9/x0AAQACAAIAAAD9/xwAAQACAAIAAAD9/xsAAQACAAIAAAD9/xoAAQACAAIAAAD9/xkAAQACAAIAAAD9/xgAAQACAAIAAAD8/x4AAQACAAIAAAD8/x0AAQACAAIAAAD8/xwAAQACAAIAAAD8/xsAAQACAAIAAAD8/xoAAQACAAIAAAD8/xkAAQACAAIAAAD8/xgAAQACAAIAAAD7/x4AAQACAAIAAAD7/x0AAQACAAIAAAD7/xwAAQACAAIAAAD7/xsAAQACAAIAAAD7/xoAAQACAAIAAAD7/xkAAQACAAIAAAD7/xgAAQACAAIAAAD6/x4AAQACAAIAAAD6/x0AAQACAAIAAAD6/xwAAQACAAIAAAD6/xsAAQACAAIAAAD6/xoAAQACAAIAAAD6/xkAAQACAAIAAAD6/xgAAQACAAIAAAD9/xcAAQACAAIAAAD5/xgAAQACAAIAAAD//w0AAQACAAIAAAD//w4AAQACAAIAAAD//w8AAQACAAIAAAD//xAAAQACAAIAAAAAABAAAQADAAIAAAAAAA0AAQADAAIAAAAAAA4AAQADAAIAAAAAAA8AAQADAAIAAAD+/w4AAQACAAIAAAD+/xAAAQACAAIAAAD+/w8AAQACAAIAAAD//xEAAQACAAIAAAD//xIAAQACAAIAAAD+/xIAAQACAAIAAAD+/xEAAQACAAIAAAD//xMAAQACAAIAAAD+/xMAAQACAAIAAAD//xQAAQACAAIAAAD9/wEAAQACAAIAAAD9/wAAAQACAAIAAAA=")
tile_set = ExtResource("3_m7uvp")

[node name="Decor" type="TileMapLayer" parent="TileMap"]
use_parent_material = true
tile_map_data = PackedByteArray("AAALAAcAAgADAAMAAAALAAgAAgADAAQAAAAXAAcAAgACAAMAAAAXAAgAAgACAAQAAAAYAAcAAgADAAMAAAAYAAgAAgADAAQAAAAbAAcAAgACAAMAAAAbAAgAAgACAAQAAAAcAAcAAgADAAMAAAAcAAgAAgADAAQAAAAGAAcAAgACAAMAAAAGAAgAAgACAAQAAAAHAAcAAgADAAMAAAAHAAgAAgADAAQAAAAKAAgAAgACAAQAAAAKAAcAAgACAAMAAAA=")
tile_set = ExtResource("3_m7uvp")

[node name="Background" type="TileMapLayer" parent="TileMap"]
use_parent_material = true
tile_set = ExtResource("3_m7uvp")

[node name="Door" parent="." instance=ExtResource("4_bhaun")]
position = Vector2(1040, 520)
next_level = "welcome_level.tscn"

[node name="PlayerSpawner" type="Marker2D" parent="."]
position = Vector2(128, 392)
script = ExtResource("5_wk735")

[node name="Tomatic" type="Node2D" parent="."]
position = Vector2(291, 230)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Tomatic"]
scale = Vector2(0.242424, 0.242424)
sprite_frames = SubResource("SpriteFrames_s8hno")

[node name="PhoneQueue" type="Node2D" parent="Tomatic"]
position = Vector2(56, 0)
script = ExtResource("8_14i4i")

[node name="Timer" type="Timer" parent="Tomatic/PhoneQueue"]
wait_time = 2.0
autostart = true

[node name="GoodPickupSound" type="AudioStreamPlayer" parent="Tomatic/PhoneQueue"]
stream = ExtResource("9_s13mu")

[node name="BadPickupSound" type="AudioStreamPlayer" parent="Tomatic/PhoneQueue"]
stream = ExtResource("10_thl7w")

[node name="AreaSpawner" type="Node2D" parent="." node_paths=PackedStringArray("pickup_receiver")]
position = Vector2(525, 130)
script = ExtResource("9_x5b7r")
pickup_receiver = NodePath("../Tomatic/PhoneQueue")
icon_type = 1

[node name="SpawnTimer" type="Timer" parent="AreaSpawner"]
wait_time = 0.5
autostart = true

[node name="ReferenceRect" type="ReferenceRect" parent="AreaSpawner"]
offset_left = -451.0
offset_right = 473.0
offset_bottom = 40.0
border_width = 3.0

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(541, 678)
collision_layer = 0
collision_mask = 128
script = ExtResource("10_hrylp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("WorldBoundaryShape2D_1eyb5")

[node name="Collectible" parent="." instance=ExtResource("11_tk8dp")]
position = Vector2(1039, 408)
collectible_datas = Array[ExtResource("14_ke24o")]([ExtResource("12_vh0u4")])

[connection signal="timeout" from="UI/UITimer" to="." method="_on_ui_timer_timeout"]
[connection signal="timeout" from="Tomatic/PhoneQueue/Timer" to="Tomatic/PhoneQueue" method="_on_timer_timeout"]
[connection signal="timeout" from="AreaSpawner/SpawnTimer" to="AreaSpawner" method="_on_spawn_timer_timeout"]
